copy portrait video templates in
for https://github.com/middlebury/drupal8/issues/1184

--- a/src/scss/base/_grid.scss
+++ b/src/scss/base/_grid.scss
@@ -26,3 +26,14 @@
     margin-right: -60%;
   }
 }
+
+.row--sm-gutters {
+  margin-right: ($grid-gutter-base-width / -2) !important;
+  margin-left: ($grid-gutter-base-width / -2) !important;
+
+  > .col,
+  > [class*='col-'] {
+    padding-left: $grid-gutter-base-width / 2;
+    padding-right: $grid-gutter-base-width / 2;
+  }
+}
