--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -69,6 +69,7 @@
 @import 'components/pagination';
 @import 'components/panel';
 // @import 'components/profile-explorer';
+@import 'components/portrait-video';
 @import 'components/profile-info';
 @import 'components/profile-section';
 @import 'components/profile-spotlight-item';
