--- a/src/templates/c8-basic-content.twig
+++ b/src/templates/c8-basic-content.twig
@@ -61,6 +61,8 @@
 
   {% include 'paragraphs/lib-search.twig' %}
 
+  {% include 'paragraphs/portrait-video-group.twig' %}
+
   {% include 'paragraphs/announcement.twig' %}
 
   {% include 'paragraphs/button.twig' %}
