--- a/src/scss/components/_section.scss
+++ b/src/scss/components/_section.scss
@@ -13,15 +13,18 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
   }
 }
 
 .section__title {
   @include section-title();
+  flex: 0 0 auto;
 }
 
 .section__link {
   margin-top: 1rem;
+  flex: 0 0 auto;
 
   @include media(md) {
     margin-top: 0;
