use serif heading for video group

--- a/src/templates/paragraphs/portrait-video-group.twig
+++ b/src/templates/paragraphs/portrait-video-group.twig
@@ -1,7 +1,7 @@
 <div class="section paragraph paragraph--expand" data-digest-content>
   <div class="paragraphs--wide__offset">
     <div class="section__header">
-      <h2 class="section__title">
+      <h2 class="h2 mb-4">
         Portrait video group
       </h2>
       <p class="section__text">
