--- a/src/templates/paragraphs/video.twig
+++ b/src/templates/paragraphs/video.twig
@@ -1,23 +1,3 @@
-{#G6 video#}
-<figure class="video js-video" data-video='{{ '<iframe src="https://player.vimeo.com/video/221201240" width="400" height="225" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>'|escape('html') }}'>
-  <div class="video__content js-video-content">
-    <a href="https://player.vimeo.com/video/221201240" class="video__link js-video-link">
-      {% include 'partials/img.twig' with { name: 'video' } %}
-      <span class="button button--primary video__button">
-        Play
-        <span class="button__icon">
-          <svg class="icon icon--sm">
-            <use xlink:href="#icon-play" />
-          </svg>
-        </span>
-      </span>
-    </a>
-  </div>
-  <figcaption class="video__body">
-    <h3 class="video__title">Practical Skills for Positive Change</h3>
-    <p class="video__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque viverra aliquet lacus a tristique. Suspendisse commodo pulvinar nisi vel laoreet. Pellentesque id hendrerit velit, vitae consectetur libero.</p>
-    {% if transcript %}
-      {% include '../partials/transcript.twig'  with { id: 'video-1' } %}
-    {% endif %}
-  </figcaption>
-</figure>
+<div class="paragraph">
+  {% include 'partials/video.twig' %}
+</div>
