remove unused data-digest-content

--- a/src/templates/paragraphs/video-group.twig
+++ b/src/templates/paragraphs/video-group.twig
@@ -1,4 +1,4 @@
-<div class="section paragraph" data-digest-content>
+<div class="section paragraph">
   <div class="section__header">
     <h2 class="h2 mb-4">
       Video group
