remove icon--sm from video

--- a/src/templates/partials/video.twig
+++ b/src/templates/partials/video.twig
@@ -5,7 +5,7 @@
       <span class="button button--primary video__button">
         Play
         <span class="button__icon">
-          <svg class="icon icon--sm">
+          <svg class="icon">
             <use xlink:href="#icon-play" />
           </svg>
         </span>
