switch to google fonts

--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -154,8 +154,8 @@ $typescale: map-merge(
 );
 
 // prettier-ignore
-$font-family-sans-serif: 'whitney ssm a', 'whitney ssm b', Tahoma, Geneva, sans-serif;
-$font-family-serif: 'sentinel ssm a', 'sentinel ssm b', georgia, serif;
+$font-family-sans-serif: 'Open Sans', Tahoma, Geneva, sans-serif;
+$font-family-serif: 'Domine', georgia, serif;
 $font-family-base: $font-family-sans-serif;
 
 $font-weight-light: 300;
