--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,6 +21,7 @@
 @import 'components/alert';
 @import 'components/announcement';
 @import 'components/audio';
+@import 'components/badge';
 @import 'components/breadcrumb';
 @import 'components/button';
 @import 'components/callout-contacts';
