Fix issue where multiple spotlights break on the same page. For #197.

--- a/src/templates/t01-home.twig
+++ b/src/templates/t01-home.twig
@@ -55,6 +55,8 @@
 
   {% include 'partials/program-spotlight.twig' %}
 
+  {% include 'partials/program-spotlight.twig' %}
+
   {% include 'paragraphs/themed-panel.twig' %}
 
   <div class="container">
