--- a/src/templates/partials/program-spotlight.twig
+++ b/src/templates/partials/program-spotlight.twig
@@ -1,3 +1,4 @@
+{% set swiper_id = random(1234) %}
 <section class="program-spotlight" aria-labelledby="midd-program-spotlight-label">
   <div class="row row--no-gutters">
     <div class="col-sm-6 col-md-4 col-lg-3">
@@ -9,10 +10,10 @@
         </div>
         <div class="program-spotlight__controls" aria-label="program spotlight controls" role="navigation">
           {# ids for tracking #}
-          <button class="button button--secondary button--circle js-program-spotlight-prev-button" aria-label="Previous" id="midd-program-spotlight-button-prev">
+          <button id="midd-program-spotlight-{{ swiper_id }}-prev" class="button button--secondary button--circle js-program-spotlight-prev-button" aria-label="Previous" id="midd-program-spotlight-button-prev">
             <span aria-hidden="true">&lsaquo;</span>
           </button>
-          <button class="button button--secondary button--circle js-program-spotlight-next-button" aria-label="Next" id="midd-program-spotlight-button-next">
+          <button id="midd-program-spotlight-{{ swiper_id }}-next" class="button button--secondary button--circle js-program-spotlight-next-button" aria-label="Next" id="midd-program-spotlight-button-next">
             <span aria-hidden="true">&rsaquo;</span>
           </button>
         </div>
@@ -20,8 +21,8 @@
 
     </div>
     <div class="col-sm-6 col-md-8 col-lg-9">
-      <div class="program-spotlight__container swiper-container js-program-spotlight">
-        <div class="program-spotlight__content swiper-wrapper js-swiper-wrapper">
+      <div id="midd-program-spotlight-{{ swiper_id }}-container" class="program-spotlight__container swiper-container js-program-spotlight">
+        <div id="midd-program-spotlight-{{ swiper_id }}" class="program-spotlight__content swiper-wrapper js-swiper-wrapper">
 
           {% for student in students %}
             <div class="program-spotlight__item swiper-slide">
